--- a/Css/Services/services.css
+++ b/Css/Services/services.css
@@ -72,35 +72,43 @@
 
   .lite-left-hidden-element {
     opacity: 0;
+    -webkit-transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
 
   .lite-right-hidden-element {
     opacity: 0;
+    -webkit-transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
   
   .visible {
     opacity: 1;
+    -webkit-transform: translateX(0); /* Remet en place */
     transform: translateX(0); /* Remet en place */
   }
 
   .lite-bottom-hidden-element {
     opacity: 0;
+    -webkit-transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
   }
 
   .lite-top-hidden-element {
     opacity: 0;
+    -webkit-transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
-    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
   }
 
   .bottom-visible {
     opacity: 1;
+    -webkit-transform: translateY(0); /* Remet en place */
     transform: translateY(0); /* Remet en place */
   }
 
@@ -164,7 +172,9 @@ nav ul li {
     box-shadow: 0px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
     left: 50%;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -177,6 +187,7 @@ nav ul li {
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -208,6 +219,7 @@ nav ul li {
 }
 
 .dropdown-services:hover .dropdown-services-content {
+    display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -232,6 +244,7 @@ nav ul li {
     border-radius: 10px;
     box-shadow: 0px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -261,6 +274,7 @@ nav ul li a, .dropdown-content a {
 
 #dc-first {
     border-radius: 10px 10px 0 0;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -280,6 +294,7 @@ nav ul li a, .dropdown-content a {
 
 #dc-last {
     border-radius: 0 0 10px 10px;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -367,6 +382,7 @@ nav ul li a:active {
     border-radius: 10px;
     box-shadow: 5px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -389,6 +405,7 @@ nav ul li a:active {
     border-radius: 10px;
     box-shadow: 5px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -414,6 +431,7 @@ nav ul li a:active {
 
 #hire:active {
     box-shadow: 0px 0px 7px 0px var(----cyan-interactiveComp-s);
+    -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
 
@@ -445,6 +463,7 @@ nav ul li a:active {
 }
 
 .stack.active #stack_t {
+    -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     top: calc(50% - 2px);
 }
@@ -454,6 +473,7 @@ nav ul li a:active {
 }
 
 .stack.active #stack_b {
+    -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
     bottom: calc(50% - 2px);
 }
@@ -483,13 +503,16 @@ nav ul::after {
     nav {
         width: 100%;
         background-color: var(--bg-cyan-soft);
+        -webkit-transform: translateY(-800px);
         transform: translateY(-800px);
+        transition: -webkit-transform 0.6s ease-out;
         transition: transform 0.6s ease-out;
         position: relative;
         z-index: 2;
     }
 
     nav.active {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 
@@ -556,10 +579,12 @@ header {
     margin: auto;
     margin-top: 50px;
     background: #101b20a4;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 50%;
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     position: relative;
     z-index: 1;
@@ -585,18 +610,21 @@ header {
 }
 
 .sec1 .centre {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
 
 .top {
+    display: -webkit-flex;
     display: flex;
     justify-content: space-between;
     gap: 20px;
 }
 
 .t-left {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -605,6 +633,7 @@ header {
 }
 
 .t-right {
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     flex: 50%;
@@ -631,6 +660,7 @@ h2, h3 {
 }
 
 .bottom {
+    display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -699,6 +729,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 
     .serv {
         width: 100%;
+        display: -webkit-flex;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -721,18 +752,21 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec2 .centre {
+    display: -webkit-flex;
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
 .sec2-left {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
 
 .sec2-right {
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -749,12 +783,14 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec3 .centre {
+    display: -webkit-flex;
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
 .sec3-left {
+    display: -webkit-flex;
     display: flex;
 
 }
@@ -764,6 +800,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec3-right {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -778,12 +815,14 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec4 .centre {
+    display: -webkit-flex;
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
 .sec4-right {
+    display: -webkit-flex;
     display: flex;
 
 }
@@ -793,6 +832,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec4-left {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -805,12 +845,14 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec5 .centre {
+    display: -webkit-flex;
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
 .sec5-left {
+    display: -webkit-flex;
     display: flex;
 
 }
@@ -820,6 +862,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec5-right {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -834,12 +877,14 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec6 .centre {
+    display: -webkit-flex;
     display: flex;
     gap: 50px;
     align-items: center;
 }
 
 .sec6-right {
+    display: -webkit-flex;
     display: flex;
 
 }
@@ -849,6 +894,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 }
 
 .sec6-left {
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -882,6 +928,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
     max-width: 1000px;
     width: 100%;
     margin: auto;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     margin-top: 60px;
@@ -899,6 +946,7 @@ section:not(.sec1) .centre h2, section:not(.sec1) .centre h3 {
 .datas>div {
     position: relative;
     grid-column: 2/3;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
 }
