--- a/Css/Home/home.css
+++ b/Css/Home/home.css
@@ -74,35 +74,45 @@ main {
 
   .lite-left-hidden-element {
     opacity: 0;
+    -webkit-transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateX(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
 
   .lite-right-hidden-element {
     opacity: 0;
+    -webkit-transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateX(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
   
   .visible {
     opacity: 1;
+    -webkit-transform: translateX(0); /* Remet en place */
     transform: translateX(0); /* Remet en place */
   }
 
   .lite-bottom-hidden-element {
     opacity: 0;
+    -webkit-transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateY(100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
 
   .lite-top-hidden-element {
     opacity: 0;
+    -webkit-transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
     transform: translateY(-100px); /* Déplace vers le bas pour l'effet de transition */
+    transition: opacity 0.5s ease-out, -webkit-transform 0.5s ease-out;
     transition: opacity 0.5s ease-out, transform 0.5s ease-out;
   }
 
   .bottom-visible {
     opacity: 1;
+    -webkit-transform: translateY(0); /* Remet en place */
     transform: translateY(0); /* Remet en place */
   }
 
@@ -183,7 +193,9 @@ nav ul li {
     box-shadow: 0px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
     left: 50%;
+    -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -195,6 +207,7 @@ nav ul li {
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -226,6 +239,7 @@ nav ul li {
 }
 
 .dropdown-services:hover .dropdown-services-content {
+    display: -webkit-flex;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -250,6 +264,7 @@ nav ul li {
     border-radius: 10px;
     box-shadow: 0px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -279,6 +294,7 @@ nav ul li a, .dropdown-content a {
 
 #dc-first {
     border-radius: 10px 10px 0 0;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -298,6 +314,7 @@ nav ul li a, .dropdown-content a {
 
 #dc-last {
     border-radius: 0 0 10px 10px;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -385,6 +402,7 @@ nav ul li a:active {
     border-radius: 10px;
     box-shadow: 5px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -407,6 +425,7 @@ nav ul li a:active {
     border-radius: 10px;
     box-shadow: 5px 10px 15px 0px var(--cyan-interactiveComp-h);
     z-index: 3;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -432,6 +451,7 @@ nav ul li a:active {
 
 #hire:active {
     box-shadow: 0px 0px 7px 0px var(----cyan-interactiveComp-s);
+    -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
 
@@ -463,6 +483,7 @@ nav ul li a:active {
 }
 
 .stack.active #stack_t {
+    -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     top: calc(50% - 2px);
 }
@@ -472,6 +493,7 @@ nav ul li a:active {
 }
 
 .stack.active #stack_b {
+    -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
     bottom: calc(50% - 2px);
 }
@@ -529,6 +551,7 @@ nav ul::after {
 #head-left {
     grid-column: 1/2;
     grid-row: 1/2;
+    display: -webkit-flex;
     display: flex;
     align-items: center;
     position: relative;
@@ -549,7 +572,9 @@ nav ul::after {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+    display: -webkit-flex;
     display: flex;
     width: 100%;
     height: 80%;
@@ -559,6 +584,7 @@ nav ul::after {
     color: var(--hight-ctr-txt-cyan);
     font-family: "lato", sans-serif;  
     z-index: 0;
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 }
 
@@ -606,6 +632,7 @@ nav ul::after {
 }
 
 #back_hleft #account {
+    display: -webkit-flex;
     display: flex;
     justify-content: space-around;
 }
@@ -640,6 +667,7 @@ nav ul::after {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
@@ -674,16 +702,19 @@ nav ul::after {
 
 #back_hleft #account #div_btn a:active {
     box-shadow: 0px 0px 10px 0px var(--cyan-interactiveComp-h);
+    -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
 
 #div_social {
+    display: -webkit-flex;
     display: flex;
     justify-content: space-between;
 }
 
 #div_social .socials {
     align-self: center;
+    -webkit-transform: scale(0.7);
     transform: scale(0.7);
     transition: 0.3s ease;
 }
@@ -694,12 +725,16 @@ nav ul::after {
 }
 
 #div_social .socials:hover {
+    -webkit-transform: scale(0.9);
     transform: scale(0.9);
+    -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
 }
 
 #div_social .socials:active {
+    -webkit-transform: scale(0.8);
     transform: scale(0.8);
+    -webkit-transform: translateY(-7px);
     transform: translateY(-7px);
 }
 
@@ -718,12 +753,14 @@ nav ul::after {
     margin: auto;
     background: url('imgs/cosite.png') center no-repeat;
     background-size: cover;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .profil:hover {
+    -webkit-transform: scale(1.2);
     transform: scale(1.2);
 }
 
@@ -737,6 +774,7 @@ nav ul::after {
 #head_bottom {
     grid-column: 1/3;
     grid-row: 2/3;
+    display: -webkit-flex;
     display: flex;
     justify-content: space-between;
 }
@@ -760,11 +798,14 @@ nav ul::after {
     nav {
         width: 100%;
         background-color: #333;
+        -webkit-transform: translateY(-800px);
         transform: translateY(-800px);
+        transition: -webkit-transform 0.6s ease-out;
         transition: transform 0.6s ease-out;
     }
 
     nav.active {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 
@@ -822,6 +863,7 @@ nav ul::after {
 
 
     #head-back {
+        display: -webkit-flex;
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -849,6 +891,7 @@ nav ul::after {
         width: auto;
         margin: auto;
         position: static;
+        -webkit-transform: none;
         transform: none
     }
 
@@ -866,6 +909,7 @@ nav ul::after {
 
     #head-right {
         width: 100%;
+        display: -webkit-flex;
         display: flex;
         justify-content: center;
         order: 1;
@@ -880,6 +924,7 @@ nav ul::after {
     }
 
     .profil:hover {
+        -webkit-transform: none;
         transform: none;
     }
 
@@ -929,6 +974,7 @@ nav ul::after {
     }
 
     #back_hleft #account #div_btn {
+        display: -webkit-flex;
         display: flex;
         justify-content: center;
     }
@@ -1028,6 +1074,7 @@ footer {
     border-top-style: solid;
     background-color: var(--bg-cyan-soft);
     height: 30vh;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
     align-items: center;
