--- a/Css/Home/homeSec3.css
+++ b/Css/Home/homeSec3.css
@@ -158,6 +158,7 @@
 
 #sec3_droite {
     grid-column: 2/3;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -200,11 +201,13 @@
 
 #btn_plus_sec3:active {
     box-shadow: 0px 0px 7px 0px var(--cyan-interactiveComp-s);
+    -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
 
 @media screen and (width <= 1280px) {
     #div_centre_sec3 {
+        display: -webkit-flex;
         display: flex;
         flex-direction: column;
     }
