--- a/Css/Home/homeSec4.css
+++ b/Css/Home/homeSec4.css
@@ -80,6 +80,7 @@
 
 #sec4_gauche {
     grid-column: 1/2;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -122,6 +123,7 @@
 
 #btn_plus_sec4:active {
     box-shadow: 0px 0px 7px 0px var(--cyan-interactiveComp-s);
+    -webkit-transform: scale(0.95);
     transform: scale(0.95);
 }
 
@@ -155,6 +157,7 @@
 
 #div_comp_sec4 {
     grid-row: 2/3;
+    display: -webkit-flex;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -173,24 +176,29 @@
 }
 
 #cpt1 {
+    -webkit-transform: translateX(-5vw);
     transform: translateX(-5vw);
 }
 
 #cpt2 {
     background-color: rgb(53, 18, 75);
+    -webkit-transform: translate(5vw, -5vh);
     transform: translate(5vw, -5vh);
 }
 
 #cpt3 {
+    -webkit-transform: translate(-5vw, -10vh);
     transform: translate(-5vw, -10vh);
 }
 
 #cpt4 {
     background-color: rgb(53, 18, 75);
+    -webkit-transform: translate(5vw, -15vh);
     transform: translate(5vw, -15vh);
 }
 
 #cpt5 {
+    -webkit-transform: translate(-5vw, -20vh);
     transform: translate(-5vw, -20vh);
 }
 
@@ -217,6 +225,7 @@
     }
 
     #div_centre_sec4 {
+        display: -webkit-flex;
         display: flex;
         flex-direction: column;
     }
