--- a/Css/Portfolio/portfolio.css
+++ b/Css/Portfolio/portfolio.css
@@ -123,6 +123,20 @@ main {
     overflow-x: hidden;
 }
 
+#language-select {
+    font-family: "nunito", sans-serif;
+    padding: 5px 15px;
+    background: var(--bg-amber-soft);
+    color: var(--links-text-amber);
+    border-radius: 30px;
+    border-color: var(--amber-border-s);
+    font-size: 1.3em;
+    font-weight: bolder;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 nav {
     width: 100%;
     z-index: 1;
@@ -498,6 +512,12 @@ nav ul::after {
 
 
 @media screen and (width <= 1280px) {
+
+    #li_select {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
     nav {
         width: 100%;
